# LMS-Django

./: README.md  courses_lessons_fixture.json  env.example  payments_fixture.json  pyproject.toml
config/: settings.py  urls.py
lms/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/management/commands/: add_courses_lessons.py
lms/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/fixtures/: groups.json
users/management/commands/: add_payments.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_options.py  0004_payment_link_payment_session_id_alter_payment_course_and_more.py  0005_alter_payment_user.py
